# Learn-DIP

./: .gitignore  LICENSE  README.md  env_CXX.md  env_Python.md
CXX/GMM/CXX/: main.cpp
CXX/LSD/: CMakeLists.txt  Coordinate.h  README.md  main.cpp
CameraEstimation/ChessBoard/: chessboard_calibration.py
Denoising/AdaptMedianFilter/: demo.py
Denoising/MotionBlurRecovery/: README.md  demo1.py
FrequencyDomainFilter/: band-stop.py  notch.py
GMM/CXX/: CMakeLists.txt  GMM.cpp  GMM.h
ImageAdjusting/AffineRectification/: README.md  demo.py  metric_rectification.py
ImageAdjusting/ImagePyramid/: image_pyramid.py
ImageAdjusting/SeamCarving/: seam_carving_demo.py
ImageClassification/KNN/: demo.py  k_nearest_neighbor.py
ImageSegmentation/Clustering/K-Means/: segmentation.py
ImageSegmentation/Clustering/Pixel-Features/: pixel_level.py
ImageSegmentation/FeatureDescriptors/HOG/: demo.py  harris.py  hog.py  ransac.py  utils.py
ImageSegmentation/FeatureDescriptors/HarrirsCornerDescriptors/: demo.py  harris.py
ImageSegmentation/LowLevelDetector/Canny/: demo.py
ImageSegmentation/LowLevelDetector/Hough/: demo.py
ImageSegmentation/SuperPixels/: slic.py
Morphology/Skeleton/: demo.py
ObjectTracking/LucasKanade/: README.md  demo.py  pyramidal_lucas_kanade.py  simple_lucas_kanade.py  utils.py
图像分割/Python/Canny/: README.md  canny_edges_detection.py
图像分割/Python/霍夫变换/: hough.py
图像复原与重建/Python/自适应中值滤波去除椒盐噪声/: admf.py
图像复原与重建/Python/运动模糊恢复/: DeBlurFilter.py  demo1.py
形态学图像处理/Python/骨架提取/: README.md
频率域滤波/Python/: Filter.py  带阻滤波.py  陷波滤波.py
